--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
     height: 260px;
     background: #f2f2f2;
     padding: 10px;
-    font-size: 1rem;
+    font-size: 22px;
 }
 
 
@@ -69,8 +69,8 @@ nav {
 
  nav li {
      display:inline-block;
-     margin-left: 150px;
-     padding-top: 160px;
+     margin-left: 90px;
+     padding-top: 130px;
      position: relative;
     
  }
@@ -94,17 +94,7 @@ nav {
 
    
 
-   #myInput {
-       justify-content: flex-start;
-       align-items: flex-end;
-       /*background-image: url("./search-58.jpg");*/
-       background-repeat: no-repeat;
-       width:30%;
-       font-size: 16px;
-       padding: 12px 20px 12px 20px;
-       border: 1px solid #b699fafd;
-      /* margin-left:650px;
-       margin-bottom: 270px;*/
+  
      
        
        
@@ -112,6 +102,14 @@ nav {
        
  .main_container {
      display: flex;
-     justify-content: flex-start;
+    /* justify-content: flex-start;*/
+     flex-direction: row;
     
+ }
+ #search_container {
+     margin-left:700px;
+     justify-content: flex-start;
+     align-items: flex-end;
+    
+      
  }
