--- a/style.css
+++ b/style.css
@@ -93,16 +93,10 @@ nav {
    }*/
 
    
-
-  
-     
-       
-       
-   }
        
  .main_container {
      display: flex;
-    /* justify-content: flex-start;*/
+     width: 100%;
      flex-direction: row;
     
  }
